# advent-of-code-2025

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
cmake/: add_day.cmake  aoc.cmake
include/: aoc.h  configuration.h.in  conversion.h  io.h  script.sh.in  sort.h
input/: day01.txt
src/: CMakeLists.txt  aoc_2025.c  conversion.c  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  io.c  sort.c
tests/: CMakeLists.txt  test_aoc2025.c
